--- a/Learning Progress Tracker/Retrieving statistics/task-info.yaml
+++ b/Learning Progress Tracker/Retrieving statistics/task-info.yaml
@@ -1220,6 +1220,18 @@ files:
         }
     }
   learner_created: true
+- name: src/tracker/entity/Course.java
+  visible: true
+  learner_created: true
+- name: src/tracker/controller/CourseController.java
+  visible: true
+  learner_created: true
+- name: src/tracker/controller/PointController.java
+  visible: true
+  learner_created: true
+- name: src/tracker/service/Service.java
+  visible: true
+  learner_created: true
 feedback_link: https://hyperskill.org/learn/step/14399#comment
 status: Unchecked
 record: -1
