--- a/Learning Progress Tracker/Retrieving statistics/task-info.yaml
+++ b/Learning Progress Tracker/Retrieving statistics/task-info.yaml
@@ -1233,5 +1233,8 @@ files:
   visible: true
   learner_created: true
 feedback_link: https://hyperskill.org/learn/step/14399#comment
-status: Unchecked
-record: -1
+status: Solved
+feedback:
+  message: Congratulations!
+  time: Sun, 10 Jul 2022 13:57:46 UTC
+record: 4
