--- a/Learning Progress Tracker/Notification service/task-info.yaml
+++ b/Learning Progress Tracker/Notification service/task-info.yaml
@@ -1831,5 +1831,9 @@ files:
   visible: true
   learner_created: true
 feedback_link: https://hyperskill.org/learn/step/14400#comment
-status: Unchecked
+status: Solved
+feedback:
+  message: Well done! You've finished the project. Select a new project on <a href="https://hyperskill.org/projects">JetBrains
+    Academy</a> to continue learning.
+  time: Sun, 10 Jul 2022 15:38:22 UTC
 record: -1
